chore: adding blog image warning for amp size.
LBSD-1930

--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -242,4 +242,6 @@ div.timepicker-popup div.timepicker-core button.btn.btn-info {
 p.warn-block {
     color: darkred;
     font-size: 14px;
+    clear: both;
+    padding-top: 10px;
 }
