--- a/server/liveblog/themes/themes_assets/amp/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-post.html
@@ -1,8 +1,10 @@
 {% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
 
 {% set mainItem = item.groups[1].refs[0].item %}
+{% set postDate = item.published_date %}
 {% if mainItem.commenter %}
   {% set type = 'comment' %}
+  {% set postDate = mainItem.meta._created %}
 {% else %}
   {% set type = item.post_items_type %}
 {% endif %}
@@ -55,7 +57,7 @@ class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-
   <amp-img src="{{ assets_root }}images/highlighted.svg" width="14" height="13" class="highlight-icon" ></amp-img>
 {% endif %}
 
-  <div class="lb-post-date">{{ item.published_date | date('')  }}</div>
+  <div class="lb-post-date">{{ postDate | date(settings.datetimeFormat)  }}</div>
 
   <!-- author plus avatar -->
   <div class="lb-author">
