--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -1,8 +1,10 @@
 {% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
 
 {% set mainItem = item.groups[1].refs[0].item %}
+{% set postDate = item.published_date %}
 {% if mainItem.commenter %}
   {% set type = 'comment' %}
+  {% set postDate = mainItem.meta._created %}
 {% else %}
   {% set type = item.post_items_type %}
 {% endif %}
@@ -33,7 +35,7 @@
   <!-- remove advertisement stylization-->
   {% if item.post_items_type != "advertisement" %}
 
-  <div class="lb-post-date" data-js-timestamp="{{ item.published_date }}">{{ item.published_date }}</div>
+  <div class="lb-post-date" data-js-timestamp="{{ postDate }}">{{ postDate }}</div>
 
   <!-- author plus avatar -->
   <div class="lb-author">
