fix: always show the image warning in blog settings.
also added on the blog creation view.

--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -78,7 +78,7 @@
                                         <button class="btn btn--primary pull-left" ng-click="settings.openUploadModal()" translate>Upload Image</button>
                                         <div class="image-text pull-left" translate>Image has not been set so far</div>
                                     </div>
-                                    <p ng-if="settings.selectedTheme.name == 'amp'" class="warn-block">If you are using the Liveblog 3 AMP theme, please make sure to use an aspect ratio of 3x2 (600x400 pixels) for the blog image.</p>
+                                    <p class="warn-block">If you are using the Liveblog 3 AMP theme, please make sure to use an aspect ratio of 3x2 (600x400 pixels) for the blog image.</p>
                                 </div>
                             </div>
 
