Squashed 'server/liveblog/themes/themes_assets/default/' changes from b97820f..0577088
0577088 chore: build.
a4f93b1 fix: commenter display.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 0577088e616f6871c4db8efd9c5d9042aeefe968

--- a/templates/template-item-comment.html
+++ b/templates/template-item-comment.html
@@ -15,5 +15,7 @@
       </div>
     {% endif %}
   </div>
-  <article>{{ ref.item.text | safe }}</article>
+  <div class="lb-item text">
+    <article>{{ ref.item.text | safe }}</article>
+  </div>
 </div>
