fix: just show the `total_posts`.

--- a/client/app/scripts/liveblog-bloglist/views/main.html
+++ b/client/app/scripts/liveblog-bloglist/views/main.html
@@ -85,7 +85,7 @@
                         <dt>{{ ::'Created' | translate}}:</dt>
                         <dd sd-reldate ng-model="blog._created"></dd>
                         <dt>{{ ::'No. of Posts' | translate }}:</dt>
-                        <dd>{{ ::blog.posts_count }}</dd>
+                        <dd>{{ ::blog.total_posts }}</dd>
                         <dl>
                         <dt> {{ :: 'Last updated' | translate }}:</dt>
                         <dd ng-if="blog.lastUpdated" sd-reldate ng-model="blog.lastUpdated"></dd>
