Squashed 'server/liveblog/themes/themes_assets/default/' changes from 0577088..5d02fd4
5d02fd4 chore: build.
d826d30 Merge pull request #100 from aleksandarjelicic/changes
f3395a7 fix: python tests.
d876fc8 screenshot updated
6976ade indented comment fixes

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 5d02fd4c0aa1ffa14eae84b900e7b0632953f7d4

--- a/less/comments.less
+++ b/less/comments.less
@@ -10,6 +10,11 @@
 	        margin-top: 25px;
 	    }
 	}
+
+	.lb-item.comment {
+		margin-left: 0px;
+	}
+
 	.lb-author__avatar--comment {
 	    background: transparent;
 	    border-color: transparent;
@@ -50,7 +55,7 @@
 @media @medium {
 	.lb-timeline {
 		.items-containerIndent {
-			margin-left: 0px;
+			margin-left: 10px;
 		}
 	    .show-author-avatar {
 	        .lb-author--indent {
@@ -60,10 +65,8 @@
 	        }
 	        .lb-author--indent {
 	            .lb-author__avatar {
-	                    width: 18px;
-	                    height: 18px;
-	                    margin-left: -11px;
-	                }
+
+	        	}
 	        }
 	        .lb-author__avatar--comment {
 
