--- a/server/liveblog/themes/themes_assets/amp/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-post.html
@@ -1,16 +1,26 @@
 {% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
 
 {% set mainItem = item.groups[1].refs[0].item %}
+{% set postDate = item.published_date %}
 {% if mainItem.commenter %}
   {% set type = 'comment' %}
+  {% set postDate = mainItem._created %}
+  {% if mainItem.meta._created %}
+    {% set postDate = mainItem.meta._created %}
+  {% endif %}
 {% else %}
   {% set type = item.post_items_type %}
+{% endif %}
+
+{% set sortTime = item.published_date %}
+{% if item.sticky %}
+  {% set sortTime = item.published_date | addten %}
 {% endif %}
 
 <article 
 id="{{ item._id | string | replace(':', '') | replace('-', '') | replace('.', '') }}" 
 data-update-time="{{ item._updated | date('X') }}" 
-data-sort-time="{{ item.published_date | date('X') }}" 
+data-sort-time="{{ sortTime | date('X') }}" 
 class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-post--highlighted{% endif %} {% if item.deleted %} hide-item {% endif %}"
 {% if item.deleted %} data-tombstone="true" {% endif %}>
 
@@ -55,7 +65,7 @@ class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-
   <amp-img src="{{ assets_root }}images/highlighted.svg" width="14" height="13" class="highlight-icon" ></amp-img>
 {% endif %}
 
-  <div class="lb-post-date">{{ item.published_date | date('')  }}</div>
+  <div class="lb-post-date">{{ postDate | date('')  }}</div>
 
   <!-- author plus avatar -->
   <div class="lb-author">
