Squashed 'server/liveblog/themes/themes_assets/default/' changes from ba2cf60..3e76a9a
3e76a9a Merge pull request #103 from liveblog/updateTime
e29a289 Showing updated time on post

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 3e76a9adf24ec56278ae5c92688bc48d1f58fef7

--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -1,7 +1,7 @@
 {% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
 
 {% set mainItem = item.groups[1].refs[0].item %}
-{% set postDate = item.published_date %}
+{% set postDate = item.content_updated_date %}
 {% set type = item.post_items_type %}
 
 {% if mainItem.commenter %}
