--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -481,6 +481,7 @@
                             &[data-type='quote'], &[data-type='image'], &[data-type='embed'] {
                                 .st-block__inner {
                                     padding: 20px;
+                                    padding-top: 45px;
                                     background: $white;
                                     border: 1px solid lighten($grayLight, 25%);
                                     @include border-radius(3px);
