--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -23,61 +23,67 @@
 <article
   class="lb-post list-group-item show-author-avatar {{ type }} {% if item.lb_highlight %}lb-post--highlighted{% endif %} {% if displaynone %}mod--displaynone{% endif %}"
   data-js-post-id="{{ item._id }}">
-  <div class="lb-type lb-type--{{ item.post_items_type }}"></div>
+  <div class="lb-post-header">
+    
+    <div class="lb-type lb-type--{{ item.post_items_type }}"></div>
 
-  {% if item.sticky and item.lb_highlight %}
-    <img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
-    <img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
-  {% elif item.sticky %}
-    <img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
-  {% elif item.lb_highlight %}
-    <img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
-  {% elif item.post_items_type == "advertisement" %}
-    <div class="lb-advertisement">{{ translate('Advertisement') }}</div>
-  {% endif %}
-
-  <!-- remove advertisement stylization-->
-  {% if item.post_items_type != "advertisement" %}
-
-  <div class="lb-post-date" data-js-timestamp="{{ postDate }}">{{ postDate }}</div>
-  <!-- author plus avatar -->
-  <div class="lb-author">
-    {% if mainItem.commenter and not (item.syndication_in and not settings.showSyndicatedAuthor) %}
-      <div class="lb-author__name">
-        {{ translate('Comment by') }} {{ mainItem.commenter }}
-      </div>
-      <img class="lb-author__avatar lb-author__avatar--comment" src="{{ assets_root }}images/comment_icon.svg">
-    {% elif settings.showAuthor %}
-      <div class="lb-author__name">
-      {% if mainItem.syndicated_creator and settings.showSyndicatedAuthor %}
-        {{ mainItem.syndicated_creator.display_name }}
-      {% elif mainItem.original_creator %}
-        {{ mainItem.original_creator.display_name }}
+    <div class="lb-post-date-icons">
+      {% if item.sticky and item.lb_highlight %}
+        <img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
+        <img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
+      {% elif item.sticky %}
+        <img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
+      {% elif item.lb_highlight %}
+        <img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
+      {% elif item.post_items_type == "advertisement" %}
+        <div class="lb-advertisement">{{ translate('Advertisement') }}</div>
       {% endif %}
-      {% if item.syndication_in %}
-        <span class="lb-producer{% if settings.showSyndicatedAuthor %} lb-producer__author{% endif %}">{{ item.syndication_in.producer_blog_title }}</span>
-      {% endif %}
-      </div>
-      {% if type == 'comment' %}
+
+      <!-- remove advertisement stylization-->
+      {% if item.post_items_type != "advertisement" %}
+  
+      <div class="lb-post-date" data-js-timestamp="{{ postDate }}">{{ postDate }}</div>
+
+    </div>
+    <!-- author plus avatar -->
+    <div class="lb-author">
+      {% if mainItem.commenter and not (item.syndication_in and not settings.showSyndicatedAuthor) %}
+        <div class="lb-author__name">
+          {{ translate('Comment by') }} {{ mainItem.commenter }}
+        </div>
         <img class="lb-author__avatar lb-author__avatar--comment" src="{{ assets_root }}images/comment_icon.svg">
-      {% endif %}
-      {% if settings.showAuthorAvatar and type != 'comment' %}
+      {% elif settings.showAuthor %}
+        <div class="lb-author__name">
         {% if mainItem.syndicated_creator and settings.showSyndicatedAuthor %}
-        <img class="lb-author__avatar" src="{{ mainItem.syndicated_creator.picture_url }}" />
-        {% elif mainItem.original_creator and mainItem.original_creator.picture_url %}
-        <img class="lb-author__avatar" src="{{ mainItem.original_creator.picture_url }}" />
-        {% else %}
-        <div class="lb-author__avatar"></div>
+          {{ mainItem.syndicated_creator.display_name }}
+        {% elif mainItem.original_creator %}
+          {{ mainItem.original_creator.display_name }}
+        {% endif %}
+        {% if item.syndication_in and not settings.showSyndicatedAuthor %}
+          <span class="lb-producer{% if settings.showSyndicatedAuthor %} lb-producer__author{% endif %}">{{ item.syndication_in.producer_blog_title }}</span>
+        {% endif %}
+        </div>
+        {% if type == 'comment' %}
+          <img class="lb-author__avatar lb-author__avatar--comment" src="{{ assets_root }}images/comment_icon.svg">
+        {% endif %}
+        {% if settings.showAuthorAvatar and type != 'comment' %}
+          {% if mainItem.syndicated_creator and settings.showSyndicatedAuthor %}
+          <img class="lb-author__avatar" src="{{ mainItem.syndicated_creator.picture_url }}" />
+          {% elif mainItem.original_creator and mainItem.original_creator.picture_url %}
+          <img class="lb-author__avatar" src="{{ mainItem.original_creator.picture_url }}" />
+          {% else %}
+          <div class="lb-author__avatar"></div>
+          {% endif %}
         {% endif %}
       {% endif %}
-    {% endif %}
+      {% endif %}
+      <!-- end remove advertisement stylization-->
+    </div>
+    <!-- end author -->
   </div>
-  <!-- end author -->
 
   {% endif %}
   <!-- end sticky position toggle -->
-  {% endif %}
-  <!-- end remove advertisement stylization-->
 
   <!-- item start -->
   <div class="items-container">
