Squashed 'server/liveblog/themes/themes_assets/default/' changes from 7fcdba1..0e7dfda
0e7dfda Merge pull request #108 from liveblog/fix/avatar-and-gallery
fe57665 chore: build.
ce5d28a fix: add missing info
2f77db5 Merge pull request #107 from aleksandarjelicic/master
4b2525d Merge branch 'master' into master
0c7cb0c Merge pull request #106 from liveblog/feature/syndicated-name
dcf9344 Vertical line and indented author avatar fix

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 0e7dfda95010f480d824a56823fcdd01c7a270de

--- a/templates/template-post-comment.html
+++ b/templates/template-post-comment.html
@@ -9,7 +9,7 @@
     {% if secondary.original_creator or secondary.syndicated_creator %}
         {% if secondary.original_creator and secondary.original_creator.picture_url %}
         <img class="lb-author__avatar" src="{{ secondary.original_creator.picture_url }}" />
-        {% elif secondary.original_creator and secondary.syndicated_creator  and settings.showSyndicatedAuthor %}
+        {% elif secondary.original_creator and secondary.syndicated_creator  and settings.showSyndicatedAuthor and mainItem.syndicated_creator.picture_url %}
         <img class="lb-author__avatar" src="{{ mainItem.syndicated_creator.picture_url }}" />
         {% else %}
         <div class="lb-author__avatar"></div>
@@ -34,7 +34,7 @@
         {% for ref in item.groups[1].refs %}
           {% if loop.index0 > 0 %}
               {% if ref.item.item_type == "image" %}
-              {% if loop.index0 + 1 < loop.length and item.groups[1].refs[loop.index0 + 1].item.item_type == "image" and (loop.index0 - 1 < 1 or not (loop.index0 > 1 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image")) %}
+              {% if settings.showGallery and loop.index0 + 1 < loop.length and item.groups[1].refs[loop.index0 + 1].item.item_type == "image" and (loop.index0 - 1 < 1 or not (loop.index0 > 1 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image")) %}
               <div class="lb-slideshow">
               {% endif %}
               <div class="lb-item {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}{{ref.item.item_type}}">
