--- a/less/comments.less
+++ b/less/comments.less
@@ -31,6 +31,7 @@
 		height: 25px;
 		margin: 0px 0px 15px 0px;
 	    .lb-author__avatar {
+			display: inline-block;
 	        width: 25px;
 	        height: 25px;
 	        margin-right: 20px;
