--- a/server/liveblog/themes/themes_assets/amp/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-post.html
@@ -75,12 +75,12 @@ class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-
           {{ translate('Comment by') }} {{ mainItem.commenter }}
         {% elif mainItem.syndicated_creator and settings.showSyndicatedAuthor %}
           {{ mainItem.syndicated_creator.display_name }}
+        {% elif item.syndication_in and not settings.showSyndicatedAuthor %}
+          <span class="lb-producer{% if settings.showSyndicatedAuthor %} lb-producer__author{% endif %}">{{ item.syndication_in.producer_blog_title }}</span>
         {% elif mainItem.original_creator %}
           {{ mainItem.original_creator.display_name }}
         {% endif %}
-        {% if item.syndication_in %}
-          <span class="lb-producer{% if settings.showSyndicatedAuthor %} lb-producer__author{% endif %}">{{ item.syndication_in.producer_blog_title }}</span>
-        {% endif %}
+
         </div>
         {% if settings.showAuthorAvatar %}
           {% if type == 'comment' %}
@@ -90,7 +90,7 @@ class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-
           width="45"
           height="45">
           </amp-img>
-          {% elif mainItem.syndicated_creator and settings.showSyndicatedAuthor %}
+          {% elif mainItem.syndicated_creator and settings.showSyndicatedAuthor and mainItem.syndicated_creator.picture_url %}
           <amp-img class="lb-author__avatar" 
           src="{{ mainItem.syndicated_creator.picture_url }}" 
           layout="fixed"
@@ -121,7 +121,7 @@ class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-
     {% endif %}
   {% endif %}
 
-  {% if gallery %}
+  {% if gallery and settings.showGallery %}
     {% include "template-item-gallery.html" %}
   {% elif type == "comment" %}
     {% include "template-post-comment.html" %}
