--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -42,7 +42,7 @@
       <!-- remove advertisement stylization-->
       {% if item.post_items_type != "advertisement" %}
   
-      <div class="lb-post-date" data-js-timestamp="{{ postDate }}">{{ postDate }}</div>
+      <div class="lb-post-date relativeDate" data-js-timestamp="{{ postDate }}">{{ postDate }}</div>
 
     </div>
     <!-- author plus avatar -->
@@ -124,52 +124,56 @@
   </div>
   <!-- item end -->
 
-  <div class="lb-post-actions">
-
-    <!-- share 
-      Aco share buttons should be vissible on click, not on share
-    -->
-    <div class="lb-post-share">
-      <img src="{{ assets_root }}images/action_share.svg" class="lb-post-shareIcon" />
-      <div class="lb-post-shareBox">
-        <a class="lb-post-shareBox__item"
-          onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
-          data-link-base="//www.facebook.com/sharer.php?s=100&p[title]=&p[url]="
-          data-link-id={{item._id}}><img src="{{ assets_root }}images/share_facebook.svg"/>
-        </a>
-        <a class="lb-post-shareBox__item"
-          onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
-          data-link-base="//plus.google.com/share?url="
-          data-link-id={{item._id}}><img src="{{ assets_root }}images/share_google.svg"/>
-        </a>
-        <a class="lb-post-shareBox__item"
-          onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
-          data-link-base="//www.linkedin.com/shareArticle?mini=true&url="
-          data-link-id={{item._id}}><img src="{{ assets_root }}images/share_linkedin.svg"/>
-        </a>
-        <a class="lb-post-shareBox__item"
-          onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
-          data-link-base="//twitter.com/home?status="
-          data-link-id={{item._id}}><img src="{{ assets_root }}images/share_twitter.svg"/>
-        </a>
-        <a class="lb-post-shareBox__item"
-          onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=1024,height=768');return false;"
-          data-link-base="mailto:?to=&subject=Liveblog&body="
-          data-link-id={{item._id}}><img src="{{ assets_root }}images/share_email.svg"/>
-        </a>
-        <span> | </span>
+  <div class="lb-post-bottom">
+    {% if settings.showUpdateDatetime and item.content_updated_date and item.post_items_type != "advertisement" %}
+      <div class="lb-post-updated">
+        <span>{{ translate('Updated') }}</span> <span class="lb-post-updated-time relativeDate" data-js-timestamp="{{item.content_updated_date}}">{{item.content_updated_date}}</span>
       </div>
-    </div>
-    <!-- end share -->
+    {% endif %}
 
-    <!-- permalink -->
-    <div class="lb-post-permalink">
-      <a id="{{ item._id }}" target="_blank">
-        <img src="{{ assets_root }}images/action_link.svg" class="lb-post-linkIcon" />
-      </a>
-    </div>
-    <!-- end permalink -->
+    <div class="lb-post-actions">
 
-  </div>
+      <div class="lb-post-share">
+        <img src="{{ assets_root }}images/action_share.svg" class="lb-post-shareIcon" />
+        <div class="lb-post-shareBox">
+          <a class="lb-post-shareBox__item"
+            onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
+            data-link-base="//www.facebook.com/sharer.php?s=100&p[title]=&p[url]="
+            data-link-id={{item._id}}><img src="{{ assets_root }}images/share_facebook.svg"/>
+          </a>
+          <a class="lb-post-shareBox__item"
+            onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
+            data-link-base="//plus.google.com/share?url="
+            data-link-id={{item._id}}><img src="{{ assets_root }}images/share_google.svg"/>
+          </a>
+          <a class="lb-post-shareBox__item"
+            onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
+            data-link-base="//www.linkedin.com/shareArticle?mini=true&url="
+            data-link-id={{item._id}}><img src="{{ assets_root }}images/share_linkedin.svg"/>
+          </a>
+          <a class="lb-post-shareBox__item"
+            onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=570,height=400');return false;"
+            data-link-base="//twitter.com/home?status="
+            data-link-id={{item._id}}><img src="{{ assets_root }}images/share_twitter.svg"/>
+          </a>
+          <a class="lb-post-shareBox__item"
+            onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=1024,height=768');return false;"
+            data-link-base="mailto:?to=&subject=Liveblog&body="
+            data-link-id={{item._id}}><img src="{{ assets_root }}images/share_email.svg"/>
+          </a>
+          <span> | </span>
+        </div>
+      </div>
+      <!-- end share -->
+
+      <!-- permalink -->
+      <div class="lb-post-permalink">
+        <a id="{{ item._id }}" target="_blank">
+          <img src="{{ assets_root }}images/action_link.svg" class="lb-post-linkIcon" />
+        </a>
+      </div>
+      <!-- end permalink -->
+
+    </div>
 
 </article>
