--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -18,11 +18,13 @@
 {% if item.sticky and settings.stickyPosition == 'top' %}
 <article
   class="lb-sticky-top-post list-group-item {{ type }} {% if displaynone %}mod--displaynone{% endif %}"
-  data-js-post-id="{{ item._id }}">
+  data-post-id="{{ item._id }}"
+  data-post-sticky="{{ item.sticky }}">
   {% else %}
 <article
   class="lb-post list-group-item show-author-avatar {{ type }} {% if item.lb_highlight %}lb-post--highlighted{% endif %} {% if displaynone %}mod--displaynone{% endif %}"
-  data-js-post-id="{{ item._id }}">
+  data-post-id="{{ item._id }}"
+  data-post-sticky="{{ item.sticky }}">
   <div class="lb-post-header">
     
     <div class="lb-type lb-type--{{ item.post_items_type }}"></div>
