Squashed 'server/liveblog/themes/themes_assets/default/' changes from 134a8a3..955d1e9
955d1e9 chore: build
5f905a0 fix: autoupdate and load more button display.
87b6911 fix: wrong order when loading more posts.
a10cfe8 Merge pull request #111 from liveblog/refactor/loading

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 955d1e9a003f385dd5431e2986bb9c989635b256

--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -16,7 +16,7 @@
     <img src="{{ blog.picture_url }}" />
   {% endif %}
 
-  {% if settings.stickyPosition == 'top' and api_response.stickyPosts._items|length > 0 %}
+  {% if settings.stickyPosition == 'top'%}
     <div class="timeline-top timeline-top--loaded">
       <section data-timeline-sticky class="lb-posts list-group">
         {% for item in api_response.stickyPosts._items %}
@@ -100,7 +100,7 @@
       <div data-new-updates class="lb-post new-updates mod--displaynone">
         <div>{{ translate("See new updates") }}</div>
       </div>
-    {% if settings.stickyPosition == 'bottom' and api_response.stickyPosts._items|length > 0 %}
+    {% if settings.stickyPosition == 'bottom' %}
       <section data-timeline-sticky class="lb-posts list-group sticky">
         {% for item in api_response.stickyPosts._items %}
           {% if not item.deleted %}
