Squashed 'server/liveblog/themes/themes_assets/default/' changes from 955d1e9..3a7b834
3a7b834 chore: rebuild.
6873842 Merge pull request #113 from aleksandarjelicic/master
68c3c6a scorecard fix
f6a1c78 LBSD-1983 high z-index for slideshows
897e478 LBSD-1990 - fix: translations in js
f70be7f fix: less build and update label
04e4891 Merge pull request #112 from liveblog/fix/refactor-left-issues

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 3a7b8347a68b84c558c58ac1403c2226f6f6a0d7

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -970,18 +970,28 @@ body .scorecard-top {
   padding: 30px;
 }
 
+body .scorecard-top hr {
+  display: none;
+}
+
 body .scorecard-top span.team-score {
-  font-size: 60px;
+  font-size: 45px;
   font-weight: bold;
+}
+
+body .scorecard-top__logoWrap img {
+  max-width: 160px;
 }
 
 body .scorecard-top span.team-name {
-  font-size: 30px;
+  font-size: 28px;
   font-weight: bold;
+  line-height: 110%;
+  margin-bottom: 10px;
 }
 
 body .scorecard-top .scorecard-top__scorers {
-  font-size: 16px;
+  font-size: .9em;
   line-height: 125%;
 }
 
@@ -990,7 +1000,8 @@ body .scorecard-top .scorecard-top__scorers li {
 }
 
 body .scorecard-top__info {
-  font-size: 14px;
+  font-size: .9em;
+  margin-top: 10px;
 }
 
 
