--- a/server/liveblog/themes/themes_assets/default/less/slideshow.less
+++ b/server/liveblog/themes/themes_assets/default/less/slideshow.less
@@ -1,3 +1,5 @@
+@import "globals.less";
+
 .lb-timeline {
   .lb-slideshow {
     display: flex;
@@ -85,7 +87,8 @@
   right: 0;
   background: rgba(0, 0, 0, 0.4);
   overflow: hidden;
-
+  z-index: 99999;
+  
   div.container {
     height: 100%;
 
