--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -1,5 +1,4 @@
 {% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
-
 {% set mainItem = item.groups[1].refs[0].item %}
 {% set postDate = item.published_date %}
 {% set type = item.post_items_type %}
@@ -127,7 +126,7 @@
   <!-- item end -->
 
   <div class="lb-post-bottom">
-    {% if settings.showUpdateDatetime and item.content_updated_date and item.post_items_type != "advertisement" %}
+    {% if settings.showUpdateDatetime and (item.content_updated_date != item.firstcreated) and item.post_items_type != "advertisement" %}
       <div class="lb-post-updated">
         <span>{{ translate('Updated') }}</span> <span class="lb-post-updated-time relativeDate" data-js-timestamp="{{item.content_updated_date}}">{{item.content_updated_date}}</span>
       </div>
