--- a/client/app/styles/sass/lb-bootstrap.scss
+++ b/client/app/styles/sass/lb-bootstrap.scss
@@ -58,6 +58,7 @@
 @import '~jquery-ui/themes/smoothness/jquery-ui.css';
 @import '~medium-editor/dist/css/medium-editor.css';
 @import '~medium-editor-tables/dist/css/medium-editor-tables.css';
+@import '~superdesk-ui-framework/dist/superdesk-ui.bundle.css';
 
 @import '~superdesk-core/styles/sass/medium-editor'; // custom skin for medium-editor
 @import '~superdesk-core/styles/sass/sf-additional';
