feature: support placeholder in theme settings options.

--- a/client/app/scripts/liveblog-themes/views/theme-settings-modal.html
+++ b/client/app/scripts/liveblog-themes/views/theme-settings-modal.html
@@ -30,6 +30,7 @@
                             <input
                                 type="{{ option.type }}"
                                 name="{{ option.name }}"
+                                placeholder="{{ option.placeholder }}"
                                 ng-model="vm.settings[option.name]" />
                         </div>
                         <div
