--- a/server/liveblog/blogs/templates/embed_amp.html
+++ b/server/liveblog/blogs/templates/embed_amp.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <title>{{ blog.title }}</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <!-- block search -->
+    {% if settings.blockSearchEngines %}
+    <meta name="robots" content="noindex, follow">
+    {% endif %}
+    <!-- end block search -->
     <link rel="canonical" href="{{ blog.public_url }}">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
