--- a/server/liveblog/blogs/templates/embed_amp.html
+++ b/server/liveblog/blogs/templates/embed_amp.html
@@ -22,6 +22,11 @@
     <script async custom-element="amp-image-lightbox" src="https://cdn.ampproject.org/v0/amp-image-lightbox-0.1.js"></script>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+    <!-- google analytics -->
+    {% if settings.gaCode %}
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+    {% endif %}
+    <!-- end google analytics -->
     
     {% block extrahead %}
     {% if amp_style %}
@@ -42,6 +47,26 @@
     {% endif %}
 {% endif %}
 {{ template | safe }}
+<!-- google analytics -->
+{% if settings.gaCode %}
+<amp-analytics type="googleanalytics">
+<script type="application/json">
+{
+  "vars": {
+    "account": "{{ settings.gaCode }}"
+  },
+  "triggers": {
+    "trackPageview": {
+      "on": "visible",
+      "request": "pageview"
+    }
+  }
+}
+</script>
+{% endif %}
+<!-- end google analytics -->
+</amp-analytics>
+<!-- esi -->
 {% if not settings.renderForESI %}
   </body>
 </html>
