--- a/server/liveblog/blogs/templates/embed_amp.html
+++ b/server/liveblog/blogs/templates/embed_amp.html
@@ -1,3 +1,4 @@
+<!-- esi -->
 {% if not settings.renderForESI %}
 <!doctype html>
 <html class="lb-wrapHtml" amp lang="en">
@@ -29,15 +30,18 @@
     <!-- end google analytics -->
     
     {% block extrahead %}
+    <!-- amp style -->
     {% if amp_style %}
     <style amp-custom>
       {{ amp_style | safe }}
       {{ (output and output.get('style')) | tostyle | safe }}
     </style>
     {% endif %}
+    <!-- end amp style -->
     {% endblock %}
   </head>
   <body class="lb-wrapBody">
+<!-- else esi -->
 {% elif not settings.removeStylesESI %}
     {% if amp_style %}
     <style amp-custom>
@@ -46,6 +50,7 @@
     </style>
     {% endif %}
 {% endif %}
+<!-- end esi -->
 {{ template | safe }}
 <!-- google analytics -->
 {% if settings.gaCode %}
@@ -71,3 +76,4 @@
   </body>
 </html>
 {% endif %}
+<!-- end esi -->
