--- a/templates/template-embed-providers.html
+++ b/templates/template-embed-providers.html
@@ -1,3 +1,13 @@
 <!-- These are cached for most users anyway, so why bother with arbitrary scripts -->
 <script async defer src="https://platform.instagram.com/en_US/embeds.js"></script>
 <script async defer src="https://platform.twitter.com/widgets.js"></script>
+<script src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+<script>
+    embedly("defaults", {
+        cards: {
+            key: '82645d4daa7742cc891c21506d28235e',
+            align: 'left',
+            chrome: 0
+        }
+    });
+</script>
