--- a/templates/template-item-image.html
+++ b/templates/template-item-image.html
@@ -8,7 +8,7 @@
     alt="{{ ref.item.meta.caption }}">
   <figcaption>
     {% if ref.item.meta.caption %}
-      <span ng-if="ref.item.meta.caption" class="caption">
+      <span class="caption">
         {{ ref.item.meta.caption }}
       </span>&nbsp;
     {% endif %}
