--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -2,6 +2,7 @@
 {% set mainItem = item.groups[1].refs[0].item %}
 {% set postDate = item.published_date %}
 {% set type = item.post_items_type %}
+{% set galleryItem = false %}
 
 {% if mainItem.commenter %}
   {% if item.groups[1].refs|length > 1 %}
@@ -86,26 +87,31 @@
   {% endif %}
   <!-- end sticky position toggle -->
 
-  <!-- item start -->
+  <!-- post start -->
   <div class="items-container">
   {% if type == "comment" %}
     {% include "template-post-comment.html" %}
   {% else %}
-    {% if item and item.groups and
-            item.groups[1] and
-            item.groups[1].refs and
-            (item.groups[1].refs | length > 0) %}
+    {% if item and item.groups and item.groups[1] and item.groups[1].refs and (item.groups[1].refs | length > 0) %}
         {% for ref in item.groups[1].refs %}
           {% if ref.item.item_type == "image" %}
-          {% if settings.showGallery and loop.index0 + 1 < loop.length and item.groups[1].refs[loop.index0 + 1].item.item_type == "image" and (loop.index0 - 1 < 0 or not (loop.index0 > 0 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image")) %}
-          <div class="lb-slideshow">
-          {% endif %}
-          <div class="lb-item {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}{{ref.item.item_type}}">
+            {% if settings.showGallery and loop.index0 + 1 < loop.length and item.groups[1].refs[loop.index0 + 1].item.item_type == "image" and (loop.index0 - 1 < 0 or not (loop.index0 > 0 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image")) %}
+              {% set galleryItem = true %}
+              <!-- slideshow start -->
+              <div class="lb-slideshow">
+                <div class="lb-slideshow_frame">
+                  <div class="lb-slideshow_slides">
+            {% endif %}
+            <!-- image item start -->
+            <div class="lb-item {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}{{ref.item.item_type}}">
           {% else %}
-          <div class="lb-item {{ref.item.item_type}}">
+            <!-- item start -->
+            <div class="lb-item {{ref.item.item_type}}">
           {% endif %}
           {% if ref.item.item_type == "embed" %}
             {% include "template-item-embed.html" %}
+          {% elif ref.item.item_type == "image" and galleryItem %}
+            {% include "template-item-galleryImage.html" %}
           {% elif ref.item.item_type == "image" %}
             {% include "template-item-image.html" %}
           {% elif ref.item.item_type == "quote" %}
@@ -116,14 +122,26 @@
             <article>{{ ref.item.text | safe }}</article>
           {% endif %}
           </div>
-          {% if ref.item.item_type == "image" and loop.index0 - 1 >= 0 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image" and not (loop.index0 + 1 >= loop.length or item.groups[1].refs[loop.index0 + 1].item.item_type == "image") %}
-          </div>
+          <!-- item end -->
+          {% if settings.showGallery and ref.item.item_type == "image" and loop.index0 - 1 >= 0 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image" and item.groups[1].refs[loop.index0 + 1] and item.groups[1].refs[loop.index0 + 1].item.item_type != "image" %}
+                </div>
+              </div>
+              
+              <span class="lb-slideshow_prev">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z"/></g></svg>
+              </span>
+              <span class="lb-slideshow_next">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"/></g></svg>
+              </span>
+            </div>
+            {% set galleryItem = false %}
+            <!-- slideshow end -->
           {% endif %}
         {% endfor %}
     {% endif %}
   {% endif %}
   </div>
-  <!-- item end -->
+  <!-- post end -->
 
   <div class="lb-post-bottom">
     {% if settings.showUpdateDatetime and (item.content_updated_date != item.firstcreated) and item.post_items_type != "advertisement" %}
