Squashed 'server/liveblog/themes/themes_assets/default/' changes from 291e32c..ef36b7d
ef36b7d chore: build
e46674e Merge pull request #132 from aleksandarjelicic/master
d9f4f17 sticky--empty css
70b5b7b Merge pull request #131 from liveblog/fix/sticky-empty

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: ef36b7de74b7e19ef94a5027ff4de248562a854c

--- a/less/embed.less
+++ b/less/embed.less
@@ -621,6 +621,10 @@
     background-size: 0px;
   }
 
+  .sticky--empty + .lb-posts.list-group, .sticky--empty + .lb-post + .lb-posts.list-group {
+    background-size: 50px;
+  }
+
   .sticky .lb-post--highlighted {
     background: none;
   }
