Warn the user of unsaved content when exiting the current blog

--- a/client/app/scripts/liveblog-edit/views/main.html
+++ b/client/app/scripts/liveblog-edit/views/main.html
@@ -1,6 +1,6 @@
 <div class="subnav">
     <div class="button-stack left-stack" >
-        <a class="navbtn homebtn" href="/#/liveblog">
+        <a class="navbtn homebtn" ng-click="backToBlogsList()">
             <i class="icon-th-large"></i>
         </a>
     </div>
